Fix for modal content overflow...

--- a/src/scss/baseline.components.modal.scss
+++ b/src/scss/baseline.components.modal.scss
@@ -11,8 +11,10 @@ MODAL
     background:#fff;
     z-index:3;
     padding:12px;
-    width:70%;
-    min-width:70%;
+    width:75%;
+    height: 75%;
+    overflow: auto;
+    min-width:75%;
 }
 
 .#{$baseline-selector-prefix}-modal-close {
